--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -126,32 +126,19 @@
                     <mat-cell *matCellDef="let borrower">{{borrower.Cnic}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="LoanCaseNo">
-                    <mat-header-cell *matHeaderCellDef>LC #</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.LoanCaseNo}}</mat-cell>
+                <ng-container matColumnDef="PhoneNumber">
+                    <mat-header-cell *matHeaderCellDef>Phone Number</mat-header-cell>
+                    <mat-cell *matCellDef="let borrower">{{borrower.PhoneNumber}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="InterestRate">
+                    <mat-header-cell *matHeaderCellDef>Interest Rate</mat-header-cell>
+                    <mat-cell *matCellDef="let borrower">{{borrower.InterestRate}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="PermanentAddress">
                     <mat-header-cell *matHeaderCellDef>Permanent Address</mat-header-cell>
                     <mat-cell *matCellDef="let borrower">{{borrower.PermanentAddress}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="TotalSanctionedAmount">
-                    <mat-header-cell *matHeaderCellDef>Total Sanctioned Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.TotalSanctionedAmount}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="SanctionLimit">
-                    <mat-header-cell *matHeaderCellDef>Sanction Limit</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.SanctionLimit}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Link">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">
-                        <span style="color: #01671B;" class="cursor-pointer" id="llcInquiryText" (click)="viewInquiry(borrower)"><b>View LC Inquiry</b></span>
-                        <!-- <a (click)="viewInquiry(borrower)">View LC Inquiry</a>             -->
-                    </mat-cell>
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
