--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -1,9 +1,27 @@
 <div>
     <div class=" px-10  sm:absolute sm:inset-0   overflow-y-scroll overflow-x-scroll bg-card dark:bg-transparent">
-        <div class="text-3xl mt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
-             style="background-color: #f6fcf8;">NDC Search List
-        </div>
 
+
+
+        <div class="row py-3">
+            <div class="col-lg-8 col-sm-12">
+                <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">NDC Search List</div>
+            </div>
+            <div class="col-lg-4 col-sm-12 self-center">
+                <p class="text-right">
+                    <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                    </button>
+                  </p>
+            </div>
+        </div>
+    
+        <!-- Header -->
+    
+    
+    
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
         <!-- Header -->
         <form [formGroup]="ndcForm">
             <!-- <div class="kt-portlet__body-progress">
@@ -117,7 +135,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-12 ">
-                    <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="findCnic()"
+                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="findCnic()"
                             color="primary" type="button">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
@@ -129,7 +147,13 @@
             </div>
 
         </form>
-        <div class="row my-4">
+            </div>
+          </div>
+
+
+
+
+        <div class="row">
             <div class="col-lg-12">
                 <div class="mat-table__wrapper overflow-scroll" [style.height]="gridHeight">
                     <mat-table class="lmat-elevation-z8"
@@ -243,8 +267,6 @@
         <div class="text-3xl font-extrabold tracking-tight pb-2 border-b border-green-500 p-2"
              style="background-color: #f6fcf8;">NDCs Pending for Approval
         </div>
-        <br>
-        <br>
 
 
         <div class="mat-table__wrapper  overflow-scroll" [style.height]="gridHeight">
