--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -1,14 +1,25 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">List of Vendors</div>
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">List of Vendors</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
+        </div>
+    </div>
 
     <!-- Header -->
-    <div class=" py-4"
-         style="flex-wrap: wrap" [formGroup]="listForm">
-        <div
-            class="absolute inset-x-0 bottom-0">
-            <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
-        </div>
-        <div>
+
+
+
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div>
 
                 <div class="row">
                     <div class="col-lg-4">
@@ -103,13 +114,25 @@
 
 <div class="row">
     <div class="col-lg-4">
-        <button mat-raised-button class="mat-raised-button mat-button-base mat-primary mb-2"
+        <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button class="mat-raised-button mat-button-base mat-primary mb-2"
         type="button" (click)="searchVendor()"><mat-icon class="mr-2 ">search</mat-icon> Search</button>
 </div>
 </div>
 </div>
+        </div>
+      </div>
 
-<div class="mat-table__wrapper mat-elevation-z8">
+
+    <!-- Header -->
+    <div
+         style="flex-wrap: wrap" [formGroup]="listForm">
+        <!-- <div
+            class="absolute inset-x-0 bottom-0">
+            <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
+        </div> -->
+
+
+<div class="mat-table__wrapper">
     <!--[style.height]="gridHeight"-->
     <mat-table class="lmat-elevation-z8"
                #table
