--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -26,10 +26,10 @@
 
 
     <!-- Main -->
-    <div class="">
+    <div >
 
         <!-- CONTENT GOES HERE -->
-        <div class="pt-1 ">
+        <div>
             <div class="form-group row" style="
             min-width: max-content;
             max-height: 70vh;
