--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -3,14 +3,18 @@
   <!-- Header -->
 
   <div class="row py-3">
-    <div class="col-lg-8 col-sm-12">
+    <div class="col-lg-6 col-sm-12">
         <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Create Fense</div>
     </div>
-    <div class="col-lg-4 col-sm-12 self-center">
+    <div class="col-lg-6 col-sm-12 self-center">
         <p class="text-right">
-            <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+          <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4" mat-flat-button [color]="'primary'">
+            <mat-icon class="mr-2">visibility</mat-icon>View Map
+          </button>
+          <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
             </button>
+
           </p>
     </div>
 </div>
@@ -50,13 +54,6 @@
 
 
 
-<div class="row py-2">
-  <div class="col-lg-12 text-right">
-    <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
-      <mat-icon class="mr-2">visibility</mat-icon>View Map
-    </button>
-  </div>
-</div>
   <!-- Main -->
   <div class="flex flex-auto overflow-y-scroll">
 
