--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
         
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
