--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 /*  @ Import/write your custom styles here.
 /*  @ Styles from this file will override 'vendors.scss' and Fuse's base styles.
 /* ----------------------------------------------------------------------------------------------------- */
-
+@import "~material-design-icons/iconfont/material-icons.css";
 .trend-dialog{
   overflow-y: hidden;
   .mat-dialog-container{
