--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,11 @@
 /*  @ Import/write your custom styles here.
 /*  @ Styles from this file will override 'vendors.scss' and Fuse's base styles.
 /* ----------------------------------------------------------------------------------------------------- */
-@import "~material-design-icons/iconfont/material-icons.css";
+@import '~material-icons-font/sass/variables';
+ @import '~material-icons-font/sass/mixins';
+ $MaterialIcons_FontPath: "~material-icons-font/fonts";
+ @import '~material-icons-font/sass/main';
+ @import '~material-icons-font/sass/Regular';
 .trend-dialog{
   overflow-y: hidden;
   .mat-dialog-container{
