--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -24,30 +24,29 @@
                        placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"
                        spellcheck="off" type="text"
                        #search>
-
-
-                <!--                <agm-map [latitude]="lat" [longitude]="lng"-->
-                <!--                         [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true"-->
-                <!--                         style="height: 500px">-->
-                <!--                    <agm-marker *ngFor="let coordinate of start_end_mark; let i=index"-->
-                <!--                                [latitude]="coordinate[0]"-->
-                <!--                                [longitude]="coordinate[1]" [agmFitBounds]="true"></agm-marker>-->
-                <!--                    <agm-polyline [visible]="true" [strokeWeight]="3" [strokeColor]="'#07b57a'">-->
-                <!--                        <agm-polyline-point-->
-                <!--                            *ngFor="let coordinate of latlng; let i=index"-->
-                <!--                            [latitude]="coordinate[0]"-->
-                <!--                            [longitude]="coordinate[1]">-->
-
-                <!--                        </agm-polyline-point>-->
-                <!--                    </agm-polyline>-->
-                <!--                </agm-map>-->
-<!--                {{start_end_mark|json}}-->
-                               <agm-map [latitude]="lat" [longitude]="lng"
-                         [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true"
+                               <agm-map #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng"
+                         [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true" (mapReady)="onMapReady($event)"
                          style="height: 500px">
                     <agm-marker *ngFor="let coordinate of start_end_mark; let i=index"
                                 [latitude]="isNumber(coordinate.Latitude)"
-                                [longitude]="isNumber(coordinate.Longitude)" [agmFitBounds]="true"></agm-marker>
+                                [longitude]="isNumber(coordinate.Longitude)" [agmFitBounds]="true">
+
+                    </agm-marker>
+
+<!--                   <agm-marker *ngFor="let m of fenceMarkers; let i = index"-->
+<!--                               (markerClick)="gm.lastOpen?.close();-->
+<!--                                gm.lastOpen = infoWindow;-->
+<!--                                 // clickedMarker(i, infowindow)"-->
+<!--                               viewCircleFense()-->
+<!--                               [latitude]="m.lat" [longitude]="m.lng" [title]="m.BranchId">-->
+
+<!--                       <agm-info-window #infowindow>-->
+<!--                           <strong>{{m.BranchId}}</strong>-->
+<!--                       </agm-info-window>-->
+
+<!--                   </agm-marker>-->
+
+
                     <agm-polyline [visible]="true" [strokeWeight]="3" [strokeColor]="'#07b57a'">
                         <agm-polyline-point
                             *ngFor="let coordinate of latlong; let i=index"
